--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-checkbox": "^1.2.3",
+    "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-progress": "^1.1.4",
+    "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -23,6 +27,7 @@
     "react-compare-slider": "^3.1.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-use": "^17.6.0",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
